# Trinity

./: 404.html  README.md  garbled_circuits.html  index.html  introduction.html  laconic_ot.html  print.html  searchindex.js  toc.html  toc.js  zk_input_commit.html
.github/workflow/: gh-pages.yaml
.github/workflows/: gh-pages.yaml
doc/: book.toml
doc/src/: SUMMARY.md  garbled_circuits.md  introduction.md  laconic_ot.md  zk_input_commit.md
halo2_lot/: Cargo.toml
halo2_lot/src/: circuits.rs  laconic_ot.rs  lib.rs  params.rs  poly_op.rs
halo2_we_kzg/: Cargo.toml  README.md
halo2_we_kzg/src/: circuits.rs  laconic_ot.rs  lib.rs  params.rs  setup.rs
kzg_ewe/: Cargo.toml
kzg_ewe/circuits/: 8bit_xor.txt  demo.txt  job_matching.txt
kzg_ewe/src/: commit.rs  garble.rs  lib.rs  main.rs  ot.rs  two_pc.rs
plain_lot/: .gitignore  Cargo.toml  README.md
plain_lot/src/: laconic_ot.rs  lib.rs
research_we_kzg/: Cargo.toml
research_we_kzg/src/: laconic_ot.rs  lib.rs
trinity/: Cargo.toml
trinity-ts/: .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
trinity/circuits/: simple_8bit_add.txt  simple_add.txt
trinity/src/: commit.rs  evaluate.rs  garble.rs  lib.rs  ot.rs  two_pc.rs
