[package]
name = "kzg_ewe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
laconic-ot = { path = "../research_we_kzg" }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", branch = "main" }
halo2_middleware = { git = "https://github.com/privacy-scaling-explorations/halo2.git", branch = "main" }
rand = "0.8"
ark-ec = "0.5.0"