[package]
name = "kzg_ewe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
laconic-ot = { path = "../research_we_kzg" }
halo2_we_kzg = { path = "../halo2_we_kzg" }
rand = "0.8"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-bn254 = "0.4.0"
ark-poly = "0.4.0"
mpz-circuits = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-common = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-garble = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-ot = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
tokio = { version = "1.23", features = [
    "net",
    "macros",
    "rt",
    "rt-multi-thread",
]}

[patch.crates-io]
halo2curves = { git = "https://github.com/Meyanis95/halo2curves.git", branch = "main" }