[package]
name = "laconic-ot"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
ark-bls12-381 = { version = "0.4.0" }
ark-ec = { version = "0.4.0" }
ark-ff = { version = "0.4.0" }
ark-poly = "0.4.0"
ark-poly-commit = "0.4.0"
ark-serialize = { version = "0.4.0" }
ark-std = "0.4.0"
rand = "0.8.5"
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5.1"

[features]
asm = ["ark-ff/asm"]
parallel = ["ark-std/parallel", "ark-ff/parallel", "ark-poly/parallel"]
print-trace = ["ark-std/print-trace"]
