[package]
name = "trinity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
laconic-ot = { path = "../research_we_kzg" }
halo2_we_kzg = { path = "../halo2_we_kzg" }
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-bn254 = "0.4.0"
ark-poly = "0.4.0"
fancy-garbling = { path = "../../swanky/fancy-garbling", features = ["serde"] }
scuttlebutt = { path = "../../swanky/scuttlebutt" }
ocelot = { path = "../../swanky/ocelot" }
serde_json = "1.0.140"
lazy_static = "1.5.0"
wasm-pack = "0.13.1"
wasm-bindgen = "0.2.100"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[patch.crates-io]
halo2curves = { git = "https://github.com/Meyanis95/halo2curves.git", branch = "main" }
