[package]
name = "trinity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
laconic-ot = { path = "../plain_lot" }
ark-bn254 = "0.4.0"
ark-poly = "0.4.0"
serde_json = "1.0.140"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
rand = { version = "0.8.5", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
mpz-garble-core = { git = "https://github.com/Meyanis95/mpz.git", branch = "feat/string_parser" }
mpz-circuits = { git = "https://github.com/Meyanis95/mpz.git", branch = "feat/string_parser" , features = ["serde"]}
mpz-core = { git = "https://github.com/Meyanis95/mpz.git", branch = "feat/string_parser" }
itybity = "0.3.1"
halo2_we_kzg = { path = "../halo2_lot" }
halo2curves = { git = "https://github.com/Meyanis95/halo2curves.git", branch = "main" }
bincode = "1.3.3"

[lib]
crate-type = ["cdylib", "rlib"]

[patch.crates-io]
halo2curves = { git = "https://github.com/Meyanis95/halo2curves.git", branch = "main" }

